--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ Pillow = "^9.5.0"
 opencv-python = "^4.7.0"
 requests = "^2.29.0"
 python-dotenv = "^1.0.0"
+selenium = "^4.9.0"
+webdriver-manager = "^3.8.6"
 
 [tool.poetry.dev-dependencies]
 
