--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ requests = "^2.29.0"
 python-dotenv = "^1.0.0"
 selenium = "^4.9.0"
 webdriver-manager = "^3.8.6"
+streamlink = "^5.4.0"
+imutils = "^0.5.4"
+numpy = "^1.24.3"
 
 [tool.poetry.dev-dependencies]
 
